# AEROCOD

./: README.md  pyproject.toml
conf/: test.yaml
diffLLT/: README.md  core.py  demo.ipynb
glider_optimization/: blockBase.py  config.py  logger.py  main.py  runner.py
glider_optimization/blocks/: __init__.py  airfoil.py  airfoil3D.py  evaluation.py  neuralFoilSampling.py  neuralFoilSampling3D.py  ocp.py  reducedModel.py
glider_optimization/utils/: airfoil_debug.py  cu_kulfan_airfoil.py  glider_jinenv.py  go_safe_pdp.py  idoc_ineq.py  llt.py  resume.py  spanwise_geometry.py
methods/: 2d_section_method.md  3d_nonlinear_llt_method.md  README.md  nested_ocp_and_gradients.md  notation.md  reduced_model.md  unsteady_corrections.md
